Add debug and yourkit options to Repl